src/test/deca/codegen/invalid/16_testCast.deca
/* Description:
    test cast

    Historique:
      cree le 23/01/2020
*/
class A {
  int x =1;
}

class B extends A {

  int y = 2;
}

class C extends A {

  int y = 3;
}

// Main Program
{
  A a;
  A c = new A();
  a = (C) (c);
  if (a instanceof C){
    println("Cast et instanceof réussit!");
  }


}
